--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/powerUP.png" alt="" class="rounded-circle b-shadow-a">
+                <img src="img/up.png" alt="" class="rounded-circle b-shadow-a">
                 <span class="author">Power Up Program Graduate</span>
               </div>
               <div class="content-test">
