added aiagent event
1. added aiagent event
2. removed send msg

--- a/index.html
+++ b/index.html
@@ -623,6 +623,7 @@
     </div>
     <div class="row">
       <!-- Fourth Row of Images -->
+       <!-- forth row first column-->
       <div class="col-md-4">
         <div class="event-box">
           <div class="event-img">
@@ -632,6 +633,17 @@
             <h3 class="event-title">Microsoft student Champ - December</h3>
             <p class="event-description">Sharing insights and expertise on Data Engineering as a speaker at the Microsoft Student Champ in December.</p>
           </div>
+        </div>
+      </div>
+      <!-- forth row second column-->
+    <div class="col-md-4">
+      <div class="event-box">
+        <div class="event-img">
+          <img src="img/aiagents.jpg" alt="" class="img-fluid">
+        </div>
+        <div class="event-content">
+          <h3 class="event-title">Tech-Spark 2.0</h3>
+          <p class="event-description">Delved into the cutting-edge technology of AI agents, their capabilities, and workshop on how to create them from scratch</p>
         </div>
       </div>
     </div>
@@ -934,6 +946,7 @@
           <div class="contact-mf">
             <div id="contact" class="box-shadow-full">
               <div class="row">
+                <!--
                 <div class="col-md-6">
                   <div class="title-box-2">
                     <h5 class="title-left">
@@ -976,22 +989,27 @@
                     </form>
                   </div>
                 </div>
-                <div class="col-md-6">
+                -->
+                <div class="col-md-12">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
                       Get in Touch
                     </h5>
                   </div>
                   <div class="more-info">
-                    <p class="lead">
-                      Let's chat! I'm always interested in connecting with folks who share a passion for data and technology.  Feel free to reach out if you have any questions about my work or potential collaborations.
+                    <p class="lead"></p>
+                      Let's connect! I'm always interested in connecting with folks who share a passion for data and technology. Feel free to reach out if you have any questions about my work or potential collaborations. Connect with me via the following email addresses and follow me on LinkedIn.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Ratmalana, Colombo</li>
                       <li><span class="ion-ios-telephone"></span> +94 713762747</li>
-                      <li><span class="ion-email"></span> 39-adc-0025@kdu.ac.lk </li>
+                      <li><span class="ion-email"></span> 39-adc-0025@kdu.ac.lk</li>
+                      <li><span class="ion-email"></span> Diluksha.Perera@studentambassadors.com</li>
+                      <li><span class="ion-email"></span> Dilukshakaushal@gmail.com</li>
                     </ul>
                   </div>
+                  
+                </div>
                   <!--<div class="socials">
                     <ul>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
