Add Microsoft Student Champ event to index.html

--- a/index.html
+++ b/index.html
@@ -647,6 +647,19 @@
         </div>
       </div>
     </div>
+
+    <!-- forth row third column-->
+    <div class="col-md-4">
+      <div class="event-box">
+        <div class="event-img">
+          <img src="img/MayChamp.jpg" alt="" class="img-fluid">
+        </div>
+        <div class="event-content">
+          <h3 class="event-title">Microsoft Student Champ - May</h3>
+          <p class="event-description">Able to showcase the innovation in Power Platform technology and share it with tech enthusiasts</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
