Add career milestones section and CV download button to index.html; enhance skill bar styles in CSS; implement timeline animation in main.js

--- a/index.html
+++ b/index.html
@@ -663,9 +663,94 @@
   </div>
 </section>
 
+<!--/ Section Events End /-->
 
-<!-- section events end -->
+<!--/ Section Career Milestones Star /-->
+<section id="milestones" class="milestones-mf sect-pt4 route">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="title-box text-center">
+          <h3 class="title-a">
+            Career Milestones
+          </h3>
+          <p class="subtitle-a">
+            My professional journey and achievements
+          </p>
+          <div class="line-mf"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Associate Data Engineer</h3>
+              <h4>Bistec Global Services</h4>
+              <p class="timeline-date">2024 December- 2025 June</p>
+              <p>Leading data engineering initiatives and implementing cloud-based solutions</p>
+            </div>
+          </div>
 
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Intern - Data Engineer</h3>
+              <h4>Bistec Global Services</h4>
+              <p class="timeline-date">2024 June - 2024 December</p>
+              <p>Working on data engineering projects and implementing cloud-based solutions</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Microsoft Learn Student Ambassador - Beta</h3>
+              <h4>Microsoft</h4>
+              <p class="timeline-date">2023 - Present</p>
+              <p>Empowering students with Microsoft technologies and building leadership skills</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>President - DatAInspire</h3>
+              <h4>KDU AI & Data Science Club</h4>
+              <p class="timeline-date">2023 - 2024 </p>
+              <p>Leading the university's AI & Data Science community and organizing tech events</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Applied Data Science Undergraduate</h3>
+              <h4>Kotelawala Defence University</h4>
+              <p class="timeline-date">2022 - Present</p>
+              <p>Pursuing degree with focus on data science, machine learning, and AI</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Google Certified Data Analyst</h3>
+              <h4>Google</h4>
+              <p class="timeline-date">2023</p>
+              <p>Mastered data analysis skills and completed real-world projects</p>
+            </div>
+          </div>
+
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--/ Section Career Milestones End /-->
 
   <!--/ Section Testimonials Star /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
