Add Azure logo image to the exams

--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
       <p class="lead">
         Passionate about tackling complex problems through data analysis, I excel at uncovering insights and crafting compelling visualizations. I am excited about continuous learning and growth, constantly seeking new challenges to contribute my skills and make a positive impact.
       </p>
-      
+      <div class="cv-download">
+        <a href="img/DCV.pdf" class="button button-a button-big button-rouded" download>
+          <i class="fa fa-download"></i> Download CV
+        </a>
+      </div>
     </div>
   </div>
 </div>
@@ -771,6 +775,19 @@
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
             </div>
+
+            <div class="testimonial-box">
+              <div class="author-test">
+                <img src="img/azlogo.png" alt="" class="rounded-circle b-shadow-a">
+                <span class="author">Azure Fundamentals</span>
+              </div>
+              <div class="content-test">
+                <p class="description lead">
+                  Successfully passed Microsoft Azure Fundamentals exam (AZ-900), solidifying my foundation in Azure Cloud Solutions.
+                </p>
+                <span class="comit"><i class="fa fa-quote-right"></i></span>
+              </div>
+            </div>
             
             <div class="testimonial-box">
               <div class="author-test">
@@ -1100,7 +1117,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Ratmalana, Colombo</li>
-                      <li><span class="ion-ios-telephone"></span> +94 713762747</li>
+                      <li><span class="ion-ios-telephone"></span> +94 77 1916256</li>
                       <li><span class="ion-email"></span> 39-adc-0025@kdu.ac.lk</li>
                       <li><span class="ion-email"></span> Diluksha.Perera@studentambassadors.com</li>
                       <li><span class="ion-email"></span> Dilukshakaushal@gmail.com</li>
