Remove email and LinkedIn contact details from the more-info section in index.html

--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead"></p>
-                      Let's connect! I'm always interested in connecting with folks who share a passion for data and technology. Feel free to reach out if you have any questions about my work or potential collaborations. Connect with me via the following email addresses and follow me on LinkedIn.
+                      Let's connect! I'm always interested in connecting with folks who share a passion for data and technology. Feel free to reach out if you have any questions about my work or potential collaborations.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Ratmalana, Colombo</li>
