Update CV download link in index.html and remove old CV file

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         Passionate about tackling complex problems through data analysis, I excel at uncovering insights and crafting compelling visualizations. I am excited about continuous learning and growth, constantly seeking new challenges to contribute my skills and make a positive impact.
       </p>
       <div class="cv-download">
-        <a href="img/DCV.pdf" class="button button-a button-big button-rouded" download>
+        <a href="img/DPerera_CV .pdf" class="button button-a button-big button-rouded" download>
           <i class="fa fa-download"></i> Download CV
         </a>
       </div>
