Update event details and Microsoft Student Ambassador roles in index.html; add recent event section and adjust section titles for clarity.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </h5>
       </div>
       <p class="lead">
-        I am a highly motivated undergraduate and Data Engineer with a strong foundation in data visualization, machine learning, and programming languages like Python and R. As a Microsoft Learn Student Ambassador, I am eager to leverage my knowledge and gain valuable real-world experience in the field of data science.
+        I am a highly motivated undergraduate and Data Engineer with a strong foundation in data visualization, machine learning, and programming languages like Python and R. As a Microsoft Student Ambassador, I am eager to leverage my knowledge and gain valuable real-world experience in the field of data science.
       </p>
       <p class="lead">
         Passionate about tackling complex problems through data analysis, I excel at uncovering insights and crafting compelling visualizations. I am excited about continuous learning and growth, constantly seeking new challenges to contribute my skills and make a positive impact.
@@ -499,7 +499,7 @@
   <!--/ Section projcts End /-->
 
 
-  <!--/ Section Events Star /-->
+  <!--/ Events /-->
 
 <section id="events" class="events-mf sect-pt4 route">
   <div class="container">
@@ -665,9 +665,25 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <!-- Most Recent Event -->
+    <div class="col-md-4">
+      <div class="event-box">
+        <div class="event-img">
+          <img src="img/uwa.jpeg" alt="" class="img-fluid">
+        </div>
+        <div class="event-content">
+          <h3 class="event-title">AI MEETS LOW-CODE: YOUR FIRST POWER APP JOURNEY STARTS HERE</h3>
+          <p class="event-description">Shared expertise on how to leverage AI agentic developmentwith Power Apps and low-code development. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
 
-<!--/ Section Events End /-->
+<!--/ Events End /-->
 
 <!--/ Section Career Milestones Star /-->
 <section id="milestones" class="milestones-mf sect-pt4 route">
@@ -711,9 +727,19 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <h3>Microsoft Learn Student Ambassador - Beta</h3>
+              <h3>Microsoft Student Ambassador - GOLD</h3>
               <h4>Microsoft</h4>
-              <p class="timeline-date">2023 - Present</p>
+              <p class="timeline-date">Aug 2025 - Present</p>
+              <p>Empowering communities with Microsoft technologies and mentoring future leaders technical skills</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>Microsoft Student Ambassador - Beta</h3>
+              <h4>Microsoft</h4>
+              <p class="timeline-date">2023 - Aug 2025</p>
               <p>Empowering students with Microsoft technologies and building leadership skills</p>
             </div>
           </div>
@@ -756,7 +782,7 @@
 </section>
 <!--/ Section Career Milestones End /-->
 
-  <!--/ Section Testimonials Star /-->
+  <!--/ achievements /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -817,12 +843,25 @@
             
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/beta.png" alt="" class="rounded-circle b-shadow-a">
-                <span class="author">Microsoft Learn Student Ambassador - Beta</span>
+                <img src="img/gold2.png" alt="" class="rounded-circle b-shadow-a">
+                <span class="author">Microsoft Student Ambassador - GOLD</span>
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Levelled up as a Microsoft Learn Student Ambassador (Beta), empowering others with tech skills. Gained lots of experienced in Microsoft based Products and build Leadership skills.
+                  Achieved GOLD level as a Microsoft Student Ambassador, empowering communities with Microsoft technologies and mentoring future leaders with technical skills.
+                </p>
+                <span class="comit"><i class="fa fa-quote-right"></i></span>
+              </div>
+            </div>
+
+            <div class="testimonial-box">
+              <div class="author-test">
+                <img src="img/beta.png" alt="" class="rounded-circle b-shadow-a">
+                <span class="author">Microsoft Student Ambassador - Beta</span>
+              </div>
+              <div class="content-test">
+                <p class="description lead">
+                  Levelled up as a Microsoft Student Ambassador (Beta), empowering others with tech skills. Gained lots of experienced in Microsoft based Products and build Leadership skills.
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
