adding recent events

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
           </div>
         </div>
         
-        <!-- Most Recent Event -->
+        <!-- Most Recent Events -->
         <div class="col-lg-4 col-md-6">
           <div class="event-card">
             <div class="event-image">
@@ -724,6 +724,30 @@
             <div class="event-content">
               <h3 class="event-title">AI MEETS LOW-CODE: YOUR FIRST POWER APP JOURNEY STARTS HERE</h3>
               <p class="event-description">Shared expertise on how to leverage AI agentic development with Power Apps and low-code development.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="event-card">
+            <div class="event-image">
+              <img src="img/kdu-aug.jpg" alt="Introduction to Azure Data Services event" class="img-fluid" loading="lazy">
+            </div>
+            <div class="event-content">
+              <h3 class="event-title">Introduction to Azure Data Services</h3>
+              <p class="event-description">A comprehensive overview of Azure's data services ecosystem, empowering attendees with knowledge of modern data solutions.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+          <div class="event-card">
+            <div class="event-image">
+              <img src="img/oct_champ.jpg" alt="Turning Data into Insights with Copilot in Microsoft Fabric event" class="img-fluid" loading="lazy">
+            </div>
+            <div class="event-content">
+              <h3 class="event-title">Turning Data into Insights with Copilot in Microsoft Fabric</h3>
+              <p class="event-description">Demonstrated how to leverage Copilot's AI capabilities in Microsoft Fabric to transform raw data into actionable business insights.</p>
             </div>
           </div>
         </div>
