--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <!-- Preload critical resources -->
   <link rel="preload" href="img/bg_image_1.png" as="image">
-  <link rel="preload" href="img/my2.jpg" as="image">
+  <link rel="preload" href="img/my3.jpg" as="image">
   
   <!-- Immediate theme application to prevent flash -->
   <script>
@@ -140,7 +140,7 @@
               <div class="col-lg-6">
                 <div class="about-image-section">
                   <div class="about-image-wrapper">
-                    <img src="img/my2.jpg" class="about-image" alt="Diluksha Perera - Professional headshot" loading="lazy">
+                    <img src="img/my3.png" class="about-image" alt="Diluksha Perera - Professional headshot" loading="lazy">
                   </div>
                   <div class="about-info">
                     <div class="info-item">
@@ -196,7 +196,7 @@
                   
                   <div class="skill-item">
                     <div class="skill-header">
-                      <span class="skill-name">R Studio</span>
+                      <span class="skill-name">Microsoft Fabric</span>
                       <span class="skill-percentage">70%</span>
                     </div>
                     <div class="skill-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
@@ -221,7 +221,7 @@
                   <h2 class="section-title" id="about-title">About me</h2>
                   <div class="about-text">
                     <p class="lead">
-                      I am a highly motivated undergraduate and Data Engineer with a strong foundation in data visualization, machine learning, and programming languages like Python and R. As a Microsoft Student Ambassador, I am eager to leverage my knowledge and gain valuable real-world experience in the field of data science.
+                      I am a highly motivated learner and Data Engineer with a strong foundation in data visualization, Microsoft Fabric, and programming languages like Python and SQL. As a Microsoft Student Ambassador, I am eager to leverage my knowledge and gain valuable real-world experience in the field of data engineering.
                     </p>
                     <p class="lead">
                       Passionate about tackling complex problems through data analysis, I excel at uncovering insights and crafting compelling visualizations. I am excited about continuous learning and growth, constantly seeking new challenges to contribute my skills and make a positive impact.
@@ -1055,7 +1055,7 @@
             <div class="blog-footer">
               <div class="blog-author">
                 <a href="#" aria-label="View author profile">
-                  <img src="img/my2.jpg" alt="Diluksha Perera" class="author-avatar">
+                  <img src="img/my3.jpg" alt="Diluksha Perera" class="author-avatar">
                   <span class="author-name">Diluksha Perera</span>
                 </a>
               </div>
