--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
             <a class="nav-link js-scroll" href="#service">Expertise</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#dashboards">Dashboards</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Projects</a>
           </li>
           <li class="nav-item">
@@ -344,6 +347,40 @@
     </div>
   </section>
   <!--/ Expertise Section End /-->
+
+  <!--/ Dashboards Section Star /-->
+  <section id="dashboards" class="dashboards-section section-padding" aria-labelledby="dashboards-title">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <div class="section-header">
+            <h2 class="section-title" id="dashboards-title">Interactive Dashboards</h2>
+            <p class="section-subtitle">Explore interactive Power BI and Microsoft Fabric dashboards showcasing data insights and visualizations.</p>
+            <div class="section-divider"></div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="row g-4">
+        <div class="col-lg-12">
+          <div class="dashboard-card">
+            <div class="dashboard-header">
+              <h3 class="dashboard-title">CV Report Dashboard</h3>
+              <p class="dashboard-description">Checkout the interactive dashboard built with in Microsoft Fabric showcasing comprehensive data analysis and visualizations.</p>
+              <div class="dashboard-meta">
+                <span class="dashboard-tool"><i class="ion-cube" aria-hidden="true"></i> Microsoft Fabric</span>
+                <span class="dashboard-date">2025</span>
+              </div>
+            </div>
+            <div class="dashboard-embed">
+              <iframe title="CVReport" width="100%" height="600" src="https://app.fabric.microsoft.com/view?r=eyJrIjoiNzU4Nzk4MjItMjIxYS00MjRmLWE5YmEtMzA0Yzc0YTkyYWI4IiwidCI6ImQ1ZTc2OWIwLWZkMTktNDVlNC1hNGE4LWI3MzU0NTQ1MDIzNCIsImMiOjEwfQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Dashboards Section End /-->
 
   <!--/ Stats Section Star /-->
   <section class="stats-section section-padding" aria-label="Statistics">
